--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,15 +20,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: create tag
         run: |
-          IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/latex
-          TAG=${IMAGE}:$(cat VERSION)-$(echo ${{ matrix.arch }} | tr -d '/')
-          echo "IMAGE_TAGS=${TAG}" >> $GITHUB_ENV
-      - name: Login to DockerHub
+          VERSION=$(cat VERSION)-${{ matrix.arch }}
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+      - name: Login to docker.io
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to ghcr.io
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
@@ -44,7 +49,11 @@ jobs:
           file: ./Dockerfile
           platforms: linux/${{ matrix.arch }}
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_TAGS }}
+          tags: |
+            ghcr.io/pddg/latex:latest-${{ matrix.arch }}
+            ghcr.io/pddg/latex:${{ env.VERSION }}-${{ matrix.arch }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/latex:latest-${{ matrix.arch }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/latex:${{ env.VERSION }}-${{ matrix.arch }}
   manifest:
     runs-on: ubuntu-20.04
     needs: build
@@ -55,15 +64,22 @@ jobs:
           fetch-depth: -1
       - name: create tag
         run: |
-          IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/latex
-          echo "IMAGE=${IMAGE}" >> $GITHUB_ENV
           echo "IMAGE_VERSION=$(cat VERSION)" >> $GITHUB_ENV
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: ./.github/actions/create-multi-arch-image
         with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          image: ghcr.io/pddg/latex
+          image-version: ${{ env.IMAGE_VERSION }}
+      - uses: ./.github/actions/create-multi-arch-image
+        with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Create multi-arch image manifest and GitHub Releases
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/latex
+          image-version: ${{ env.IMAGE_VERSION }}
+      - name: Create GitHub Releases
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -73,14 +89,6 @@ jobs:
             echo "${TAG} exists. Skipped"
             exit 0
           fi
-          docker manifest create ${{ env.IMAGE }}:${IMAGE_VERSION} \
-              ${{ env.IMAGE }}:${IMAGE_VERSION}-amd64 \
-              ${{ env.IMAGE }}:${IMAGE_VERSION}-arm64
-          docker manifest push ${{ env.IMAGE }}:${IMAGE_VERSION}
-          docker manifest create ${{ env.IMAGE }}:latest \
-              ${{ env.IMAGE }}:${IMAGE_VERSION}-amd64 \
-              ${{ env.IMAGE }}:${IMAGE_VERSION}-arm64
-          docker manifest push ${{ env.IMAGE }}:latest
           git tag ${TAG}
           git push --tags
           gh release create ${TAG} -n "${TAG}"
