--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,15 +23,14 @@ jobs:
           VERSION=$(cat VERSION)-${{ matrix.arch }}
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
       - name: Login to docker.io
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Login to ghcr.io
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
