--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,8 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: create tag
         run: |
-          VERSION=$(cat VERSION)-${{ matrix.arch }}
-          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
       - name: Login to docker.io
         uses: docker/login-action@v1
         with:
